--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -23,7 +23,7 @@
 \begin{titlepage}
 \newgeometry{top=.8in, bottom=.8in, left=.8in, right=.8in}
 
-\title{\Large \textbf{Quantifying the Life-cycle Benefits \\ of a Prototypical Early Childhood Program}\thanks{This research was supported in part by: the Buffett Early Childhood Fund; the Pritzker Children's Initiative; the Robert Wood Johnson Foundation's Policies for Action program; the Leonard D. Schaeffer Center for Health Policy and Economics; NIH grants NICHD R37HD065072, NICHD R01HD054702, NIA R24AG048081, and NIA P30AG024968; Successful Pathways from School to Work, an initiative of the University of Chicago's Committee on Education and funded by the Hymen Milgrom Supporting Organization; the Human Capital and Economic Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development and funded by the Institute for New Economic Thinking; and the American Bar Foundation. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. Years of partnership and collaboration have made this work possible. Collaboration with Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff on related work has strengthened the analysis in this paper. Collaboration with Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California on adapting the Future America Model is gratefully acknowledged. For helpful comments on various versions of the paper, we thank St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Dana Goldman, Ganesh Karapakula, Sidharth Moktan, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Chris Taber, Matthew Tauzer, Ed Vytlacil, Jim Walker, and Matt Wiswall. We benefited from helpful comments received at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016, and at the University of Wisconsin, February, 2017. For information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact any of the authors, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
+\title{\Large \textbf{Quantifying the Life-cycle Benefits \\ of a Prototypical Early Childhood Program}\thanks{This research was supported in part by: the Buffett Early Childhood Fund; the Pritzker Children's Initiative; the Robert Wood Johnson Foundation's Policies for Action program; the Leonard D. Schaeffer Center for Health Policy and Economics; NIH grants NICHD R37HD065072, NICHD R01HD054702, NIA R24AG048081, and NIA P30AG024968; Successful Pathways from School to Work, an initiative of the University of Chicago's Committee on Education and funded by the Hymen Milgrom Supporting Organization; the Human Capital and Economic Opportunity Global Working Group, an initiative of the Center for the Economics of Human Development and funded by the Institute for New Economic Thinking; and the American Bar Foundation. The views expressed in this paper are solely those of the authors and do not necessarily represent those of the funders or the official views of the National Institutes of Health. The authors wish to thank Frances Campbell, Craig and Sharon Ramey, Margaret Burchinal, Carrie Bynum, and the staff of the Frank Porter Graham Child Development Institute at the University of North Carolina Chapel Hill for the use of data and source materials from the Carolina Abecedarian Project and the Carolina Approach to Responsive Education. Years of partnership and collaboration have made this work possible. Collaboration with Andr\'{e}s Hojman, Yu Kyung Koh, Sylvi Kuperman, Stefano Mosso, Rodrigo Pinto, Joshua Shea, Jake Torcasso, and Anna Ziff on related work has strengthened the analysis in this paper. Collaboration with Bryan Tysinger of the Leonard D. Schaeffer Center for Health Policy and Economics at the University of Southern California on adapting the Future America Model is gratefully acknowledged. For helpful comments on various versions of the paper, we thank St\'{e}phane Bonhomme, Fl\'{a}vio Cunha, Steven Durlauf, David Figlio, Dana Goldman, Ganesh Karapakula, Magne Mogstad, Sidharth Moktan, Tanya Rajan, Azeem Shaikh, Jeffrey Smith, Chris Taber, Matthew Tauzer, Ed Vytlacil, Jim Walker, and Matt Wiswall. We benefited from helpful comments received at the Leonard D. Schaeffer Center for Health Policy and Economics in December, 2016, and at the University of Wisconsin, February, 2017. For information on the implementation of the Carolina Abecedarian Project and the Carolina Approach to Responsive Education and assistance in data acquisition, we thank Peg Burchinal, Carrie Bynum, Frances Campbell, and Elizabeth Gunn. For information on childcare in North Carolina, we thank Richard Clifford and Sue Russell. The set of codes to replicate the computations in this paper are posted in a repository. Interested parties can request to download all the files. The address of the repository is \url{https://github.com/jorgelgarcia/abccare-cba}. To replicate the results in this paper, contact any of the authors, who will put you in contact with the appropriate individuals to obtain access to restricted data. The Appendix for this paper is posted on \url{http://cehd.uchicago.edu/ABC_CARE}.}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
@@ -49,7 +49,7 @@ University of Southern California}
 \singlespacing
 \thispagestyle{empty}
 \begin{abstract}
-\noindent This paper quantifies the life-cycle benefits of a widely implemented early childhood program targeting disadvantaged families that was evaluated by random assignment. We join experimental data with non-experimental data using economic models to forecast the life-cycle benefits. Our baseline estimate of the internal rate of return (benefit/cost ratio) is 13.7\% (7.3). We conduct extensive sensitivity analyses to account for model estimation error, model pretesting, and judgments made about the empirical magnitudes of non-market benefit. We examine the performance of widely used, \textit{ad hoc} estimates of long-term benefits based on childhood test scores and find them wanting. 
+\noindent This paper quantifies the life-cycle benefits of a widely implemented early childhood program targeting disadvantaged families that was evaluated by random assignment. We join experimental data with non-experimental data using economic models to forecast the life-cycle benefits. Our baseline estimate of the internal rate of return (benefit/cost ratio) is 13.7\% (7.3). We conduct extensive sensitivity analyses to account for model estimation error, model pretesting, and judgments made about the empirical magnitudes of non-market benefits. We examine the performance of widely used, \textit{ad hoc} estimates of long-term benefits based on childhood test scores and find them wanting.
 \end{abstract}
 
 \noindent \textbf{Keywords}: Childcare, early childhood education, life-cycle benefits, long-term forecasts, rates of return. \\
@@ -88,7 +88,7 @@ Email: dleaf@healthpolicy.usc.edu                     & Email: prados@usc.edu \\
 
 This paper estimates the life-cycle benefits of an influential early childhood program targeted to disadvantaged children that is currently being replicated around the world.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP in eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Current Educare programs in the U.S. are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}. Appendix~\ref{app:details-educare} lists around 25 Educare programs, all of which implement curricula based on ABC/CARE. In this appendix, we also list the precise similarities across this programs. Our estimates are likely lower bounds for the returns of Educare. Evidence from ABC/CARE is highly relevant for contemporary policy discussions because their main components are present in a variety of current interventions. About 19\% of all African-American children would be eligible for ABC/CARE today and 43\% of African-American children were eligible at its inception.} The program has substantial impacts on the lives of  participant children and their mothers. Monetizing benefits and costs across multiple domains, we estimate a baseline internal rate of return of 13.7\% per annum and a baseline benefit/cost ratio of 7.3. We conduct extensive sensitivity and robustness analyses to produce ranges of plausible values for the estimates of the internal rate of return (8.0, 18.3) and the benefit/cost ratio (1.52, 17.40). Consistent with the previous literature, there are substantial differences in economic returns that favor males.\footnote{\cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}.}
 
-Our analysis contributes to a growing literature on the value of early-life programs for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term returns and not short-term arrays of treatment effects are relevant for policy analysis. However, long-term evidence on the effectiveness of these programs is limited given the short-term follow-up for most studies.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_QE,Heckman_Moon_etal_2010_RateofReturn}), the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and the Infant Health and Development Program (IHDP) (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}). IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of follow-up data, many studies of early childhood programs report treatment effects for a few outcomes collected at early ages after program completion, e.g. IQ scores or school readiness measures.\footnote{See, e.g.,  \cite{Weiland_2013_CD_Impacts-of-Pre-K} and \cite{Kline_Walters_2016_QJE}.} Other studies, such as that of \citet{Kline_Walters_2016_QJE}, use early measures fit on auxiliary data to project life-cycle estimates of labor income. We show how misleading this practice can be. We analyze labor income as well as a number of non-market benefits. Because of the plausible ranges of the monetary value of of non-market benefits found in the literature, we conduct an extensive sensitivity analysis for this component of our estimates.
+Our analysis contributes to a growing literature on the value of early-life programs for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} The full array of life cycle benefits and not just short-term arrays of treatment effects are relevant for life cycle policy analysis. However, long-term evidence on the effectiveness of these programs is limited given the short-term follow-up for most studies.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_QE,Heckman_Moon_etal_2010_RateofReturn}), the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and the Infant Health and Development Program (IHDP) (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}). IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of follow-up data, many studies of early childhood programs report treatment effects for a few outcomes collected at early ages after program completion, e.g. IQ scores or school readiness measures.\footnote{See, e.g.,  \cite{Weiland_2013_CD_Impacts-of-Pre-K} and \cite{Kline_Walters_2016_QJE}.} Other studies, such as that of \citet{Kline_Walters_2016_QJE}, use early measures fit on auxiliary data to project life-cycle estimates of labor income. We show how misleading this practice can be. We analyze labor income as well as a number of non-market benefits. Because of the plausible ranges of the monetary value of of non-market benefits found in the literature, we conduct an extensive sensitivity analysis for this component of our estimates.
 
 We analyze the costs and benefits from two virtually identical early childhood programs evaluated by randomized trials conducted in North Carolina: the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE)---henceforth ABC/CARE. Both programs were launched in the 1970s and have long-term follow-ups through the mid 30s. The programs start early (at 8 weeks of life) and engaged participants until age 5. \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} analyze the treatment effects of the program on a variety of outcomes up to the mid-30's (e.g. participation in crime, labor income, IQ, schooling, and increased maternal education and labor income arising from the implied childcare subsidy). This paper forecasts these benefits over the life cycle to estimate rates of return and benefit/cost ratios.\footnote{The parental labor income we observe is aggregated across the parents. Only 27\% of the mothers lived with a partner at baseline, so we refer to the gain in parental labor income as a gain in mother's labor income.}
 
@@ -125,7 +125,7 @@ Figure~\ref{figure:main} previews our findings. It displays the discounted (usin
 \includegraphics[width=.7\columnwidth]{output/venn_pooled.pdf}
 \floatfoot{
 \footnotesize
-Note: This figure presents all possible combinations of accounting for the benefits from the four major categories in our analysis. The non-overlapping areas present estimates accounting for a single category as the benefit. When two categories overlap, these are the benefits that we account for. And so on for the rest of the plot. The costs remain constant across all calculations and are the same as in Figure~\ref{figure:main}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We put boxes around point estimates that are significant at the $10\%$ level.\\}
+Note: This figure presents all possible combinations of accounting for the benefits from the four major categories in our analysis. The non-overlapping areas present estimates accounting for a single category as the benefit. When two categories overlap, these are the benefits that we account for. And so on for the rest of the plot. The costs remain constant across all calculations and are the same as in Figure~\ref{figure:main}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We put boxes around point estimates that are statistically significant at the $10\%$ level.\\}
 \end{figure}
 
 Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensitivity analyses. It shows the estimated rates of return and benefit/cost ratios when we calculate our estimates under the assumption of only one stream being the benefit. We further recalculate the estimates with all possible combinations of the main benefit and cost streams. Our measures of economic efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize. No single component drives our results. We report estimates from a variety of specifications of regressors and functional forms. Our estimates are robust to different plausible assumptions about the values of non-market outcomes, for which conventional estimates of standard errors are not available.
@@ -396,13 +396,12 @@ Assumption~\ref{ass:summary} combined with Assumption~\ref{ass:exog}, Equation~\
 \mathbb{E} \left[ Y_{e,j,a}^d | \bm{X}_{e,a}^d = \bm{x}, \bm{B}_{e} = \bm{b}, D = d   \right] &=&  \mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}, \bm{B}_{n} = \bm{b} \right] \text{ for }  d \in \{0,1\}.
 \end{eqnarray}
 
-We test and do not reject these hypotheses. See  Appendix~\ref{app:invariance}.\footnote{This holds when pooling males and females and when testing separately by gender (see  Appendix~\ref{app:invariance}).}  Under our assumptions, experimental treatment effects should equal differences in the conditional means of the non-experimental samples evaluated at $\bm{X}_{n,a} = \bm{x}^1$ and  $\bm{X}_{n,a} = \bm{x}^0$:
+In Appendix~\ref{app:invariance}, we test and do not reject these hypotheses.\footnote{This holds when pooling males and females and when testing separately by gender (see  Appendix~\ref{app:invariance}).}  Under our assumptions, experimental treatment effects should equal differences in the conditional means of the non-experimental samples evaluated at $\bm{X}_{n,a} = \bm{x}^1$ and  $\bm{X}_{n,a} = \bm{x}^0$:
 
 \begin{eqnarray}
 \mathbb{E} \left[ Y_{e,j,a}^1 |  \bm{X}_{e,a}^1 = \bm{x}^1, \bm{B}_e = \bm{b}, D = 1 \right] - \mathbb{E} \left[ Y_{e,j,a}^0 |  \bm{X}_{e,a}^0 = \bm{x}^0, \bm{B}_e = \bm{b}, D = 0 \right] = \nonumber \\
 \mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}^1, \bm{B}_n = \bm{b} \right] - \mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}^0, \bm{B}_n = \bm{b} \right].
 \end{eqnarray}
-
 In Section~\ref{sec:usingaux}, we report tests of this hypothesis for $a \leq a^*$.
 
 \subsubsection{Summarizing the Implications of Exogeneity and Structural Invariance}
@@ -496,6 +495,8 @@ We also calculate medical expenditure before age 30 (see Appendix~\ref{appendix:
 QALYs are crucial for our cost/benefit analysis because they monetize the health of an individual at each age. Figure~\ref{fig:qalys} plots our estimates of mean QALYs together with a PSID comparison, in an exercise analogous to that used to produce Figure~\ref{fig:labor-income-profiles}.\footnote{In our baseline estimation, we assume that each year of life is worth  $\$150,000$ (2014 USD). Our estimates are robust to substantial variation in this assumption, as we show in  Appendix~\ref{appendix:sensitivity}.} Although there is not a clear age-by-age treatment effect on QALYs, there is a statistically and substantively significant difference in the accumulated present value of the QALYs between the treatment and the control groups. The QALYs for female individuals in the control group match the QALYs of disadvantaged individuals in the PSID. For males, use of the PSID auxiliary sample to constant controls likely understates the net benefits of ABC/CARE.\footnote{In  Appendix~\ref{appendix:health} we further discuss and justify the parameterizations required to obtain estimates of QALYs. \citet{Goldman_etal_2015_Future-America-Model} examine the sensitivity to these parameterizations and discuss alternative micro-simulations monetizing health condition.}
 
 \subsection{Forecasting Parental Labor Income} \label{section:pincome}
+
+\textbf{[JJH: Is this true? Are we to compare the first column with controls? See HO] [JLG: This is exactly what we are doing but non-parametrically. Put differently, the group labeled as PSID disadvantaged are the individuals for whom $\bm{B} \in \mathcal{B}_{0}$. The group labeled as control predicted is the "synthetic control" and the group labeled as treatment predicted are the "synthetic treatment". This is the same comparison as in Figure 12. But added the synthetic treatment to assess the treatment effect. As we have discussed, the treatment effect on QALYs only becomes significant when pooling males and females. Thus, when comparing the three bars displayed within genders there are no statistical differences.]}
 
 ABC/CARE offers childcare to the parents of treated children for more than nine hours a day for five years, 50 weeks a year. Only $27\%$ of mothers of children reported living with a partner at baseline and this status barely changed during the course of the experiment (see Appendix~\ref{appendix:background}). The childcare component generates substantial treatment effects on maternal labor force participation and parental labor income as reported in \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}. This presumably arises from wage growth due to parental attainment of further education and/or more work experience.\footnote{There is also an effect on maternal school enrollment. Some of the mothers decided to further enroll in school, obtained a higher degree, and that could be one of the reasons why they make more money afterward. We report these treatment effects in Appendix~\ref{appendix:background}. We quantify the cost of this additional education using the strategy in Appendix~\ref{appendix:education}.}
 
