adding distribution of NPVs

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -148,7 +148,7 @@ This paper justifies and interprets these estimates. The paper unfolds in the fo
 	\includegraphics[width=\textwidth]{output/overalldist_IRR}
 \end{subfigure}%
 \footnotesize \justify
-Note: Panel (a) displays the distribution of estimates of the benefit/cost ratio that we estimate throughout the paper. Horizontal lines indicate the baseline estimates, presented in Figure~\ref{figure:main}. Panel (b) presents the analogous figure for the internal rate of return.\\
+Note: Panel (a) displays the distribution of estimates of the benefit/cost ratio that we estimate throughout the paper. Vertical lines indicate the baseline estimates, presented in Figure~\ref{figure:main}. Panel (b) presents the analogous figure for the internal rate of return. See Figure~\ref{figure:ranges-NPV} in Appendix~\ref{appendix:sensitivity} for the analogous plots of net present values. \\
 \end{sidewaysfigure}
 
 \section[Background and Data Sources]{Background and Data Sources} \label{section:background}
