updated heckman bib to fix duncan's name

--- a/heckman.bib
+++ b/heckman.bib
@@ -30748,6 +30748,26 @@
   Timestamp                = {2016.03.01}
 }
 
+@Unpublished{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished,
+  Title                    = {The Life-Cycle Benefits of an Influential Early Childhood Program},
+  Author                   = {Garc\'{i}a, Jorge Luis and Heckman, James J. and Ermini Leaf, Duncan and Prados, Mar\'{i}a Jos\'{e}},
+  Note                     = {University of Chicago, Department of Economics},
+  Year                     = {2017},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.01}
+}
+
+@Unpublished{Garcia_Heckman_Hojman_etal_2016_Analyzing,
+  Title                    = {Analyzing the Short- and Long-Term Effects of Early Childhood Education on Multiple Dimensions of Human Development},
+  Author                   = {Garc\'{i}a, Jorge Luis and Heckman, James J. and Hojman, Andr\'{e}s and Ermini Leaf, Duncan and Prados, Mar\'{i}a Jos\'{e}, and Shea, Joshua and Torcasso, Jake C.},
+  Note                     = {University of Chicago, Department of Economics},
+  Year                     = {2016},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.06.02}
+}
+
 @Unpublished{Garcia_Heckman_Hojman_etal_2016_ABC_unpublished,
   Title                    = {The Internal Rate of Return and the Benefit-Cost Ratio of the {C}arolina {A}becedarian {P}roject},
   Author                   = {Garc\'{i}a, Jorge Luis and Heckman, James J. and Hojman, Andr\'{e}s and Leaf, Duncan Ermini and Prados, Mar\'{i}a Jos\'{e} and Shea, Joshua and Torcasso, Jake C.},
@@ -30757,26 +30777,6 @@
   Institution              = {University of Chicago},
   Owner                    = {Stallings_LLC},
   Timestamp                = {2015.09.29}
-}
-
-@Unpublished{Garcia_Heckman_Hojman_etal_2016_Analyzing,
-  Title                    = {Analyzing the Short- and Long-Term Effects of Early Childhood Education on Multiple Dimensions of Human Development},
-  Author                   = {Garc\'{i}a, Jorge Luis and Heckman, James J. and Hojman, Andr\'{e}s and Leaf, Duncan Ermini and Prados, Mar\'{i}a Jos\'{e}, and Shea, Joshua and Torcasso, Jake C.},
-  Note                     = {University of Chicago, Department of Economics},
-  Year                     = {2016},
-
-  Owner                    = {Jessica Dyer},
-  Timestamp                = {2016.06.02}
-}
-
-@Unpublished{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished,
-  Title                    = {The Life-Cycle Benefits of an Influential Early Childhood Program},
-  Author                   = {Garc\'{i}a, Jorge Luis and Heckman, James J. and Leaf, Duncan Ermini and Prados, Mar\'{i}a Jos\'{e}},
-  Note                     = {University of Chicago, Department of Economics},
-  Year                     = {2017},
-
-  Owner                    = {Stallings_LLC},
-  Timestamp                = {2016.09.01}
 }
 
 @Unpublished{Garcia_Hojman_Shea_2014_Time_Allocation_Unpublished,
@@ -32885,17 +32885,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
-}
-
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -32908,6 +32897,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
+}
+
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
@@ -46497,6 +46497,19 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Address                  = {New York}
 }
 
+@Article{Kalaitzidakis2003,
+  Title                    = {Rankings of Academic Journals and Institutions in Economics},
+  Author                   = {Kalaitzidakis, Pantelis and Mamuneas, Theofanis P. and Stengos, Thanasis},
+  Journal                  = {Journal of the European Economic Association},
+  Year                     = {2003},
+  Number                   = {6},
+  Pages                    = {1346-1366},
+  Volume                   = {1},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2017.05.21}
+}
+
 @Book{Kalbfleisch_Prentice_1980_failure,
   Title                    = {The Statistical Analysis of Failure Time Data},
   Author                   = {Kalbfleisch, J. D. and Prentice, Ross L.},
@@ -48622,6 +48635,18 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {69},
 
   Timestamp                = {2008.04.08}
+}
+
+@Article{Kodrzycki2006,
+  Title                    = {New Approaches to Ranking Economics Journals},
+  Author                   = {Kodrzycki, Yolanda K. and Yu, Pingkang},
+  Journal                  = {The {BE} Journal of Economic Analysis and Policy},
+  Year                     = {2006},
+  Number                   = {1},
+  Volume                   = {5},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2017.05.21}
 }
 
 @Article{Koenig_Cicchetti_etal_2000_CD,
@@ -79550,7 +79575,7 @@ Robinson, Lara Rachel},
 
 @TechReport{Goldman_etal_2015_Future-America-Model,
   Title                    = {{The {Future America Model}: Technical Documentation}},
-  Author                   = {Tysinger, Bryan and Leaf, Duncan Ermini and Goldman, Dana P.},
+  Author                   = {Tysinger, Bryan and Ermini Leaf, Duncan and Goldman, Dana P.},
   Institution              = {Working Document},
   Year                     = {2015},
 
@@ -84818,6 +84843,18 @@ early childhood education and pre-kindergarten programs},
 
   Owner                    = {Jenni},
   Timestamp                = {2010.08.03}
+}
+
+@Unpublished{Hui-Little_2003_Penalized-Spline,
+  Title                    = {Penalized Spline Nonparametric Mixed Models for Inference about a Finite Population Mean from Two-Stage Samples},
+  Author                   = {Zheng, Hui and Little, Rod},
+  Note                     = {The {U}niversity of {M}ichigan {D}epartment of {B}iostatistics {W}orking {P}aper {S}eries},
+
+  Month                    = {March},
+  Year                     = {2003},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2017.05.21}
 }
 
 @Article{Zheng_1996_JoE,
