--- a/abc_comprehensivecba_appendix-pub.tex
+++ b/abc_comprehensivecba_appendix-pub.tex
@@ -8,7 +8,7 @@
 \renewcommand\theassumption{AA--\arabic{assumption}}
 
 \begin{document}
-\title{\Large \textbf{Web Appendix: \\ Quantifying the Life-cycle Benefits \\ of a Prototypical Early Childhood Program}}
+\title{\Large \textbf{Appendix: \\ Quantifying the Life-cycle Benefits \\ of a Prototypical Early Childhood Program}}
 
 \author{Jorge Luis Garc\'{i}a, James J. Heckman, Duncan Ermini Leaf, \\ and Mar\'{i}a Jos\'{e} Prados}
 \date{\today}
